--- a/gradle.properties
+++ b/gradle.properties
@@ -10,8 +10,8 @@ loader_version=0.16.14
 
 # Mod Properties
 mod_version=1.0.0
-maven_group=mrborghini.bettercords
-archives_base_name=better-cords
+maven_group=mrborghini.bettercoords
+archives_base_name=better-coords
 
 # Dependencies
 fabric_version=0.119.2+1.21.4
